--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
+title: Brampton Website Design, Search Engine Optimization and Digital Marketing
 lang: en
 ref: home
 permalink: /home/
@@ -8,20 +8,18 @@ permalink: /home/
 <body>
 	{% include menu.html %}
 	<div class="jumbotron home-background">
-		<h1 class="splash"><span>This is what we do Top</span><span>Top the World Sites</span><span>is what we hi hello.</span></h1>
-		<h2 class="splash"><span>Take your company to</span><span>Best website making</span><span>your company to new</span></h2>
+		<h1 class="splash"><span>Custom-tailored Web Design,</span><span>Strategy and Execution for</span><span>Peak Performance.</span></h1>
+		<h2 class="splash"><span>Increase brand perception.</span><span>Enhance user experience.</span><span>Grow your business.</span></h2>
 		<!-- <button class="button" style="vertical-align:middle"><span>Work with Us</span></button> -->
 	</div>
 	<div class="banner">
-		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
-			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</h2>
+		<h2>We specialize in <span class="underline">Web Design</span> and make awesome, pixel-perfect websites, get them rank high with <span class="underline">Search Engine Optimization</span>, and increase traffic to them with clever <span class="underline">Digital Marketing</span>.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Our Services</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight">
@@ -34,7 +32,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="toUpper bold"><a href="{{ site.baseurl }}/website-design/">Website Development</a></p>
-						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first impression, so make it the best.</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the best impression.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
 					</div>
 				</div>
@@ -48,7 +46,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="toUpper bold"><a href="{{ site.baseurl }}/seo/">Search Engine Optimization</a></p>
-						<p><a href="{{ site.baseurl }}/seo/">Bring more people to your website by making it rank higher in search engines.</a></p>
+						<p><a href="{{ site.baseurl }}/seo/">Make your site rank high in search engines to increase traffic to your website.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/seo/">Learn More</a></p>
 					</div>
 				</div>
@@ -62,7 +60,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="toUpper bold"><a href="{{ site.baseurl }}/digital-marketing/">Digital Marketing</a></p>
-						<p><a href="{{ site.baseurl }}/digital-marketing/">Your website is your company's first impression, so make it the best.</a></p>
+						<p><a href="{{ site.baseurl }}/digital-marketing/">Use social media marketing and pay-per-click advertising to increase traffic to your site.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/digital-marketing/">Learn More</a></p>
 					</div>
 				</div>
