--- a/website-design.html
+++ b/website-design.html
@@ -8,23 +8,20 @@ permalink: /website-design/
 <body>
 	{% include menu.html %}
 	<div class="jumbotron website-design-background">
-		<h1 class="splash">Top of the World</h1>
-		<h2 class="splash">Take your company to new heights</h2>
+		<!-- <h1 class="splash">Website Design</h1>
+		<h2 class="splash"><span>Your website is your company's</span><span>first impression, so make it.</span><span>the best.</span></h2> -->
 	</div>
 	<div class="banner">
-		<h2>Fast, modern and elegant websites that are easy to use.</h2>
+		<h2>Fast, modern and elegant websites that increase your brand perception and are easy to use.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Design</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content, </h3>
 			</div>
 		</div>
-		<div class="row eqHeight greybg">
+		<div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 					<img src="{{ site.baseurl }}/images/brampton.jpg">
@@ -42,7 +39,7 @@ permalink: /website-design/
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight greyerbg">
+		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 					<img src="{{ site.baseurl }}/images/brampton.jpg">
@@ -60,24 +57,6 @@ permalink: /website-design/
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/brampton.jpg">
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
 		<div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
@@ -96,6 +75,24 @@ permalink: /website-design/
 				</div>
 			</div>
 		</div>
+		<!-- <div class="row eqHeight greyerbg">
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="featuresImg">
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div> -->
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Prices</h1>
