--- a/home.html
+++ b/home.html
@@ -7,10 +7,9 @@ permalink: /home/
 ---
 <body>
 	{% include menu.html %}
-	<div class="jumbotron home-background">
-		<h1 class="splash"><span>Custom-tailored Web Design,</span><span>Strategy and Execution for</span><span>Peak Performance.</span></h1>
+	<div class="bg home">
+		<h1 class="splash"><span>Results-driven Website Design,</span><span>Search Engine Optimization</span><span>and Digital Marketing to</span><span>Maximize Your Leads.</span></h1>
 		<h2 class="splash"><span>Increase brand perception.</span><span>Enhance user experience.</span><span>Grow your business.</span></h2>
-		<!-- <button class="button" style="vertical-align:middle"><span>Work with Us</span></button> -->
 	</div>
 	<div class="banner">
 		<h2>We specialize in <span class="underline">Web Design</span> and make awesome, pixel-perfect websites, get them rank high with <span class="underline">Search Engine Optimization</span>, and increase traffic to them with clever <span class="underline">Digital Marketing</span>.</h2>
@@ -46,7 +45,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="toUpper bold"><a href="{{ site.baseurl }}/seo/">Search Engine Optimization</a></p>
-						<p><a href="{{ site.baseurl }}/seo/">Make your site rank high in search engines to increase traffic to your website.</a></p>
+						<p><a href="{{ site.baseurl }}/seo/">Make your site rank high in search engines to increase traffic to your website and generate more leads.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/seo/">Learn More</a></p>
 					</div>
 				</div>
@@ -60,7 +59,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="toUpper bold"><a href="{{ site.baseurl }}/digital-marketing/">Digital Marketing</a></p>
-						<p><a href="{{ site.baseurl }}/digital-marketing/">Use social media marketing and pay-per-click advertising to increase traffic to your site.</a></p>
+						<p><a href="{{ site.baseurl }}/digital-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/digital-marketing/">Learn More</a></p>
 					</div>
 				</div>
