--- a/website-design.html
+++ b/website-design.html
@@ -7,7 +7,7 @@ permalink: /website-design/
 ---
 <body>
 	{% include menu.html %}
-	<div class="jumbotron website-design-background">
+	<div class="jumbotron bg website-design">
 		<!-- <h1 class="splash">Website Design</h1>
 		<h2 class="splash"><span>Your website is your company's</span><span>first impression, so make it.</span><span>the best.</span></h2> -->
 	</div>
@@ -18,36 +18,32 @@ permalink: /website-design/
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Design</h1>
-				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content, </h3>
+				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/brampton.jpg">
+					<img src="{{ site.baseurl }}/images/responsive-design.jpg">
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
+					<p class="toUpper bold serviceTextBox">Responsive Design</p>
+					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
+					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
 				</div>
 			</div>
 		</div>
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/brampton.jpg">
+					<img src="{{ site.baseurl }}/images/static-dynamic-websites.jpg">
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
+					<p class="toUpper bold serviceTextBox">User Experience</p>
 					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
@@ -65,7 +61,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class="toUpper bold serviceTextBox">Compelling Content</p>
 					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
