--- a/thank-you.html
+++ b/thank-you.html
@@ -8,7 +8,7 @@ permalink: /thank-you/
 <body>
 	{% include menu.html %}
 	<div class="jumbotron website-design-background"></div>
-	<div class="contactBanner">
+	<div class="banner contact">
 		<h2>Thank you! Your message has been received!</h2>
 	</div>
 	<div class="body-container">
