--- a/home.html
+++ b/home.html
@@ -16,13 +16,13 @@ permalink: /home/
 	</div>
 	<div class="body-container">
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
+			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Our Services</h1>
 				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight">
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
 						<a href="{{ site.baseurl }}/website-design/">
@@ -36,7 +36,7 @@ permalink: /home/
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
 						<a href="{{ site.baseurl }}/seo/">
@@ -50,7 +50,7 @@ permalink: /home/
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
 						<a href="{{ site.baseurl }}/digital-marketing/">
