--- a/website-design.html
+++ b/website-design.html
@@ -17,25 +17,69 @@ permalink: /website-design/
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Design</h1>
-				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3>
+				<h1>Website Design</h1>
+				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time. At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals.</h3>
+				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
+		<div class="row eqHeight icons">
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/responsive.png">
+				<h3>Responsive Design</h3>
+				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/content.png">
+					<h3>Content Management</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/cloud.png">
+					<h3>Cloud Hosted</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/xml.png">
+					<h3>XML Sitemap</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/secure.png">
+					<h3>Secure</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/analytics.png">
+					<h3>Google Analytics</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/copyrighting.png">
+					<h3>Copyrighting</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+			<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/seo.png">
+					<h3>SEO Friendly</h3>
+					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+			</div>
+		</div>
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/responsive-design.jpg">
+					<img src="{{ site.baseurl }}/images/responsive-design.png">
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
+			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Responsive Design</p>
+					<!-- <p class="serviceTextBoxHeading">Responsive Design</p> -->
+					<h3>Template</h3>
 					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
 					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight">
+		<!-- <div class="row eqHeight">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 					<img src="{{ site.baseurl }}/images/static-dynamic-websites.jpg">
@@ -70,7 +114,7 @@ permalink: /website-design/
 						first impression, so make it the best.</p>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- <div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
