--- a/website-design.html
+++ b/website-design.html
@@ -22,7 +22,7 @@ permalink: /website-design/
 				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
-		<div class="row eqHeight icons">
+		<div class="row eqHeight icons greyerbg">
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/responsive.png">
 				<h3>Responsive Design</h3>
@@ -43,6 +43,8 @@ permalink: /website-design/
 					<h3>XML Sitemap</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
+			</div>
+			<div class="row eqHeight icons greyerbg secondRow">
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/secure.png">
 					<h3>Secure</h3>
@@ -67,72 +69,59 @@ permalink: /website-design/
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/responsive-design.png">
+					<img src="{{ site.baseurl }}/images/template.png">
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="serviceDetail">
-					<!-- <p class="serviceTextBoxHeading">Responsive Design</p> -->
-					<h3>Template</h3>
+					<h3 class="toUpper">Template</h3>
 					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
 					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
 				</div>
 			</div>
 		</div>
-		<!-- <div class="row eqHeight">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/static-dynamic-websites.jpg">
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h3 class="toUpper">Template+</h3>
+					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
+					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">User Experience</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img class="shadow" src="{{ site.baseurl }}/images/template-plus.jpg">
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/brampton.jpg">
+					<img class="shadow" src="{{ site.baseurl }}/images/custom.jpg">
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
+			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Compelling Content</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
+					<h3 class="toUpper">Custom</h3>
+					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
+					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
 				</div>
 			</div>
-		</div> -->
-		<!-- <div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
+		</div>
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h3 class="toUpper">Enterprise</h3>
+					<p class="serviceTextBox">Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</p>
+					<p class="serviceTextBox">All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</p>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="featuresImg">
-					<img src="{{ site.baseurl }}/images/brampton.jpg">
+					<img class="shadow" src="{{ site.baseurl }}/images/enterprise.jpg">
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div> -->
+		</div>
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Prices</h1>
@@ -144,7 +133,7 @@ permalink: /website-design/
 		</div>
 		<div class="row eqHeight greyerbg featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
-				<ul>
+				<ul class="shadow">
 					<h2 class="toUpper bold">Template</h2>
 					<h2 class="toUpper bold">$700</h2>
 					<li>ABC</li>
@@ -156,7 +145,7 @@ permalink: /website-design/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul>
+				<ul class="shadow">
 					<h2 class="toUpper bold">Template+</h2>
 					<h2 class="toUpper bold">$700</h2>
 					<li>ABC</li>
@@ -171,7 +160,7 @@ permalink: /website-design/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul>
+				<ul class="shadow">
 					<h2 class="toUpper bold">Custom</h2>
 					<h2 class="toUpper bold">$700</h2>
 					<li>ABC</li>
@@ -189,7 +178,7 @@ permalink: /website-design/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul>
+				<ul class="shadow">
 					<h2 class="toUpper bold">Enterprise</h2>
 					<h2 class="toUpper bold">$700</h2>
 					<li>ABC</li>
