--- a/thank-you.html
+++ b/thank-you.html
@@ -9,7 +9,7 @@ permalink: /thank-you/
 	{% include menu.html %}
 	<div class="jumbotron website-design-background"></div>
 	<div class="banner contact">
-		<h2>Thank you! Your message has been received!</h2>
+		<h2>Thank you! Your message has been received. We will be in touch with you shortly.</h2>
 	</div>
 	<div class="body-container">
 		<!-- <div class="row">
