--- a/website-design.html
+++ b/website-design.html
@@ -17,7 +17,7 @@ permalink: /website-design/
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
-				<h1>Website Design</h1>
+				<h1 class="toUpper">Website Design</h1>
 				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time. At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals.</h3>
 				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
@@ -25,44 +25,44 @@ permalink: /website-design/
 		<div class="row eqHeight icons greyerbg">
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/responsive.png">
-				<h3>Responsive Design</h3>
+				<h3 class="toUpper">Responsive Design</h3>
 				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/content.png">
-					<h3>Content Management</h3>
+					<h3 class="toUpper">Content Management</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/cloud.png">
-					<h3>Cloud Hosted</h3>
+					<h3 class="toUpper">Cloud Hosted</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/xml.png">
-					<h3>XML Sitemap</h3>
+					<h3 class="toUpper">XML Sitemap</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			</div>
 			<div class="row eqHeight icons greyerbg secondRow">
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/secure.png">
-					<h3>Secure</h3>
+					<h3 class="toUpper">Secure</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/analytics.png">
-					<h3>Google Analytics</h3>
+					<h3 class="toUpper">Google Analytics</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/copyrighting.png">
-					<h3>Copyrighting</h3>
+					<h3 class="toUpper">Copyrighting</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/seo.png">
-					<h3>SEO Friendly</h3>
+					<h3 class="toUpper">SEO Friendly</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 		</div>
